force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <description>Master data for products - 商品マスターデータ</description>
    <label>商品マスター</label>
    <nameField>
        <label>商品名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>商品マスター</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>