force-app/main/default/objects/Product__c/fields/Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Category_Code__c</fullName>
    <label>分類コード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>