force-app/main/default/objects/Product__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>部門</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>商品</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>