force-app/main/default/objects/Product__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>単価</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>